--- a/aurisi/src/MainWindow.glade
+++ b/aurisi/src/MainWindow.glade
@@ -55,9 +55,11 @@ Author: Michael Oswald
             <property name="can_focus">False</property>
             <child>
               <object class="GtkImage" id="logo">
+                <property name="width_request">65</property>
+                <property name="height_request">65</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="stock">gtk-missing-image</property>
+                <property name="pixbuf">AurisLogo_small.png</property>
                 <property name="icon_size">6</property>
               </object>
               <packing>
@@ -251,7 +253,7 @@ Author: Michael Oswald
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
-                              <object class="GtkImageMenuItem">
+                              <object class="GtkImageMenuItem" id="menuitemAbout">
                                 <property name="label">gtk-about</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
@@ -1147,6 +1149,7 @@ Author: Michael Oswald
         </child>
         <child>
           <object class="GtkProgressBar" id="progressBar">
+            <property name="height_request">25</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
           </object>
