--- a/aurisi/src/MainWindow.glade
+++ b/aurisi/src/MainWindow.glade
@@ -358,7 +358,7 @@ Author: Michael Oswald
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="orientation">vertical</property>
-            <property name="position">700</property>
+            <property name="position">630</property>
             <property name="position_set">True</property>
             <child>
               <object class="GtkNotebook" id="notebookMain">
@@ -1497,11 +1497,9 @@ Author: Michael Oswald
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkButton" id="buttonAdd">
-                                        <property name="label" translatable="yes">button</property>
+                                      <object class="GtkLabel">
                                         <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
+                                        <property name="can_focus">False</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">5</property>
@@ -1814,7 +1812,9 @@ Author: Michael Oswald
                   <object class="GtkTreeView" id="messageDisplay">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="headers_visible">False</property>
+                    <property name="headers_clickable">False</property>
+                    <property name="enable_search">False</property>
+                    <property name="show_expanders">False</property>
                     <child internal-child="selection">
                       <object class="GtkTreeSelection"/>
                     </child>
